[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolbox-autobench"
version = "0.1.0"
description = "Automate llama-bench runs across toolbox backends with power profile sweep and report generation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
tui = ["textual>=0.60.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
toolbox-autobench = "toolbox_autobench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/toolbox_autobench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=toolbox_autobench --cov-report=term-missing -q"
